Fix body z-indexes

--- a/src/vegas.css
+++ b/src/vegas.css
@@ -45,11 +45,13 @@
 body.vegas-container {
     overflow: auto;
     position: static;
+    z-index: -2;
 }
     body.vegas-container > .vegas-timer,
     body.vegas-container > .vegas-overlay,
     body.vegas-container > .vegas-slide {
         position: fixed;
+        z-index: -1;
     }
 
 .vegas-video {
